--- a/src/components/contactPage/devContact.scss
+++ b/src/components/contactPage/devContact.scss
@@ -2,14 +2,11 @@
   background-color: $dev-secondary-color;
 }
 
-.dev .social-item {
-  background-color: $dev-accent-color2;
-  position: relative;
-  border: solid 2px transparent;
-}
+.dev .social-item-link {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
 
-.dev .social-item:hover {
-  background: black;
-  color: $dev-accent-color;
-  border-color: $dev-accent-color;
+  display: block;
+  z-index: 1;
 }
