--- a/src/components/button/devButton.scss
+++ b/src/components/button/devButton.scss
@@ -22,6 +22,13 @@
     z-index: -1;
   }
 
+  /* If button contains a link */
+  & a {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+  }
+
   &:hover,
   &:focus {
     color: $dev-accent-color;
@@ -36,6 +43,7 @@
       left: 0;
       right: 0;
       bottom: 0;
+      pointer-events: none;
     }
 
     & .circle {
