--- a/src/components/projectsPage/projects.scss
+++ b/src/components/projectsPage/projects.scss
@@ -35,14 +35,12 @@
 
 .social-btn {
   width: 100%;
-  padding: 1em;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   gap: 0.5rem;
-  text-decoration: none;
-  color: currentColor;
 }
 
 .load-more-btn {
