--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,9 @@ $circle-border: 50%;
   place-items: center;
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
