--- a/src/components/aboutPage/designAbout.scss
+++ b/src/components/aboutPage/designAbout.scss
@@ -1,13 +1,23 @@
-.about-container.des {
+.about.des {
   background: $des-accent-color2; /* fallback for older browsers */
   background: linear-gradient(
     180deg,
     $des-accent-color2 0%,
     $des-primary-color 40%
   );
-}
 
-.avatar.des {
-  border: solid 10px $des-secondary-color;
-  background: $des-accent-color;
+  & .avatar {
+    border: solid 10px $des-secondary-color;
+    background: $des-accent-color;
+  }
+
+  & .label {
+    background: $des-accent-color2;
+  }
+
+  @media (orientation: landscape) {
+    .about-content {
+      flex-direction: row;
+    }
+  }
 }
