--- a/src/components/filterMenu/designFilters.scss
+++ b/src/components/filterMenu/designFilters.scss
@@ -1,8 +1,10 @@
-.filter-menu.des label {
-  @extend .des-button;
-}
+.filter-menu.des {
+  & label {
+    @extend .des-button;
+  }
 
-.filter-menu.des input:checked ~ label {
-  background: $des-primary-color;
-  color: $des-accent-color;
+  & input:checked ~ label {
+    background: $des-primary-color;
+    color: $des-accent-color;
+  }
 }
