--- a/src/components/navMenu/devNav.scss
+++ b/src/components/navMenu/devNav.scss
@@ -1,15 +1,15 @@
 .toggle-menu.dev .btn {
   background-color: $dev-accent-color2;
   transition: $transition-ease;
-}
 
-.toggle-menu.dev .btn:hover::before,
-.toggle-menu.dev .btn:hover {
-  background: black;
-  color: $dev-accent-color;
-}
+  &:hover::before,
+  &:hover {
+    background: black;
+    color: $dev-accent-color;
+  }
 
-.toggle-menu.dev .btn:hover::before,
-.toggle-menu.dev .btn:first-child:hover {
-  border: solid 2px $dev-accent-color;
+  &:hover::before,
+  &:first-child:hover {
+    border: solid 2px $dev-accent-color;
+  }
 }
