--- a/src/components/projectsPage/devProjects.scss
+++ b/src/components/projectsPage/devProjects.scss
@@ -1,237 +1,306 @@
-.project-card.dev {
-  height: 45vw;
-  flex: 0 1 100%;
+$project-grid-gap: 1.5rem;
+
+@mixin cards-grid(
+  $card-height,
+  $card-width,
+  $project-grid-gap: $project-grid-gap
+) {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(calc($card-width - $project-grid-gap), 1fr)
+  );
+  grid-template-rows: repeat(
+    auto-fit,
+    minmax(calc($card-height - $project-grid-gap), 1fr)
+  );
+  grid-auto-columns: calc($card-width - $project-grid-gap);
+  grid-auto-rows: calc($card-height - $project-grid-gap);
+  grid-auto-flow: dense;
 }
 
-.card-content.dev {
-  width: 100%;
-  height: 100%;
-  border-radius: $rounded-border;
-
-  text-align: center;
-  position: relative;
-  transition: transform 1s linear;
-  transform-style: preserve-3d;
-}
-
-.project-card.dev:hover .card-content {
-  transform: rotateY(0.5turn);
-}
-
-.card-front,
-.card-back {
-  width: 100%;
-  height: 100%;
-  border-radius: $rounded-border;
-
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-}
-
-.card-front picture {
-  height: 100%;
-}
-
-.card-front img {
-  height: 100%;
-  width: 100%;
-  border-radius: $rounded-border;
-  object-fit: cover;
-}
-
-.card-front::before {
-  border: 2px solid $dev-accent-color;
-  border-radius: $rounded-border;
-  content: "";
-
-  position: absolute;
-  top: 5%;
-  bottom: 5%;
-  left: 5%;
-  right: 5%;
-  transform: translateZ(8rem);
-}
-
-.front-titles {
-  width: 100%;
-  height: 100%;
-  border-radius: $rounded-border;
-  padding: 10%;
-  background: $dev-primary-color-transparent;
-
-  position: absolute;
-  top: 0;
-  transform: translateZ(3rem);
-  transform-style: preserve-3d;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.dev.card-title {
-  transform: translateZ(3rem);
-}
-
-.dev.card-subtitle {
-  transform: translateZ(2rem);
-}
-
-.card-back {
-  transform: rotateY(0.5turn);
-  background: $dev-secondary-color;
-  overflow: hidden;
-}
-
-.card-description-container {
-  flex: 1 1 40%;
-  margin: 2rem 2rem 0;
-
-  text-align: center;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  overflow: hidden;
-}
-
-.card-description.clamp {
-  --maxlines: 0;
-
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: var(--maxlines);
-  -webkit-box-orient: vertical;
-  overflow-wrap: break-word;
-  overflow: hidden;
-}
-
-.read-more {
-  text-decoration: underline;
-  transition: $transition-ease;
-
-  &:hover {
-    color: $dev-accent-color2;
-  }
-}
-
-.card-tools {
-  flex: 1 1 80%;
-  margin: 1rem;
-
-  display: inline-flex;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: space-evenly;
-  justify-content: center;
-  list-style: none;
-  gap: 0.75rem;
-
-  opacity: 0.8;
-  font-size: 0.8rem;
-}
-
-.card-links {
-  width: 100%;
-  flex: 1 0 20%;
-  border-radius: 0 0 $rounded-border $rounded-border;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-self: flex-end;
-}
-
-.dev .btn-text {
-  display: none;
-}
-
-.demo-link {
-  height: 100%;
-  border-radius: 0 0 0 $rounded-border;
-
-  background-color: rgba(79, 224, 217, 0.827);
-}
-
-.github-link {
-  height: 100%;
-  border-radius: 0 0 $rounded-border $rounded-border;
-  background-color: $dev-accent-color2;
-}
-
-.demo-link ~ .github-link {
-  border-radius: 0 0 $rounded-border 0;
-}
-
-.dev .social-btn-container {
-  width: 100%;
-}
-@media (min-width: 600px) {
-  .project-card.dev {
-    flex-basis: 35%;
-    height: 25vw;
-  }
-}
-
-@media (min-width: 801px) and (orientation: portrait) {
-  .dev .btn-text,
-  .card-description-container {
+.projects.dev {
+  & .projects-container {
+    width: 100%;
     display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: flex-end;
+    gap: $project-grid-gap;
   }
 
-  .card-tools {
+  & .project-card {
+    height: 45vw;
+    flex: 0 1 100%;
+
+    &:hover .card-content {
+      transform: rotateY(0.5turn);
+    }
+  }
+
+  & .card-content {
+    width: 100%;
+    height: 100%;
+    border-radius: $rounded-border;
+
+    text-align: center;
+    position: relative;
+    transition: transform 1s linear;
+    transform-style: preserve-3d;
+  }
+
+  & .card-front,
+  & .card-back {
+    width: 100%;
+    height: 100%;
+    border-radius: $rounded-border;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+  }
+
+  & .card-front {
+    & picture {
+      height: 100%;
+    }
+
+    & img {
+      height: 100%;
+      width: 100%;
+      border-radius: $rounded-border;
+      object-fit: cover;
+    }
+
+    &::before {
+      border: 2px solid $dev-accent-color;
+      border-radius: $rounded-border;
+      content: "";
+
+      position: absolute;
+      top: 5%;
+      bottom: 5%;
+      left: 5%;
+      right: 5%;
+      transform: translateZ(8rem);
+    }
+  }
+
+  & .front-titles {
+    width: 100%;
+    height: 100%;
+    border-radius: $rounded-border;
+    padding: 10%;
+    background: $dev-primary-color-transparent;
+
+    position: absolute;
+    top: 0;
+    transform: translateZ(3rem);
+    transform-style: preserve-3d;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  & .card-title {
+    transform: translateZ(3rem);
+  }
+
+  & .card-subtitle {
+    transform: translateZ(2rem);
+  }
+
+  & .card-back {
+    transform: rotateY(0.5turn);
+    background: $dev-secondary-color;
+    overflow: hidden;
+  }
+
+  & .card-description-container {
     flex: 1 1 40%;
-  }
-}
+    margin: 2rem 2rem 0;
 
-@media (min-width: 801px) and (orientation: landscape) {
-  .dev.card-subtitle {
+    text-align: center;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  & .card-description.clamp {
+    --maxlines: 0;
+
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: var(--maxlines);
+    -webkit-box-orient: vertical;
+    overflow-wrap: break-word;
+    overflow: hidden;
+  }
+
+  & .read-more {
+    text-decoration: underline;
+    transition: $transition-ease;
+
+    &:hover {
+      color: $dev-accent-color2;
+    }
+  }
+
+  & .card-tools {
+    flex: 1 1 80%;
+    margin: 1rem;
+
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: space-evenly;
+    justify-content: center;
+    list-style: none;
+    gap: 0.75rem;
+
+    opacity: 0.8;
+    font-size: 0.8rem;
+  }
+
+  & .card-links {
+    width: 100%;
+    flex: 1 0 20%;
+    border-radius: 0 0 $rounded-border $rounded-border;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: flex-end;
+  }
+
+  & .btn-text {
     display: none;
   }
 
-  .project-card.dev {
-    flex-basis: 30%;
-    height: 12vw;
-  }
-}
+  & .demo-link {
+    height: 100%;
+    border-radius: 0 0 0 $rounded-border;
 
-@media (min-width: 1025px) {
-  .dev.card-subtitle {
-    display: flex;
+    background-color: rgba(79, 224, 217, 0.827);
+
+    & ~ .github-link {
+      border-radius: 0 0 $rounded-border 0;
+    }
   }
 
-  .card-tools {
-    flex: 1 1 40%;
+  & .github-link {
+    height: 100%;
+    border-radius: 0 0 $rounded-border $rounded-border;
+    background-color: $dev-accent-color2;
   }
-}
 
-@media (min-width: 1250px) {
-  .dev .btn-text,
-  .card-description-container {
-    display: flex;
+  & .social-btn-container {
+    width: 100%;
   }
-}
 
-@media (min-width: 1440px) {
-  .project-card.dev {
-    height: 11vw;
+  // Grid styling
+  @media (min-width: 600px) {
+    $card-height: 25vw;
+    $card-width: 35%;
+
+    & .projects-container {
+      width: 80%;
+      @include cards-grid($card-height, $card-width);
+    }
+
+    & .project-card {
+      grid-column-end: span 1;
+      grid-row-end: span 1;
+      height: 100%;
+    }
+
+    & .project-card.open {
+      grid-column-end: span 2;
+      grid-row-end: span 2;
+
+      & .card-content {
+        transform: rotateY(0.5turn);
+      }
+
+      & .card-description-container {
+        overflow: visible;
+      }
+    }
   }
-}
 
-@media (min-width: 1600px) {
-  .project-card.dev {
-    flex: 0 1 25%;
-    height: 15vw;
+  @media (min-width: 801px) and (orientation: portrait) {
+    & .btn-text,
+    & .card-description-container {
+      display: flex;
+    }
+
+    & .card-tools {
+      flex: 1 1 40%;
+    }
+  }
+
+  @media (min-width: 801px) and (orientation: landscape) {
+    & .projects-container {
+      $card-height: 14vw;
+      $card-width: 30%;
+
+      @include cards-grid($card-height, $card-width);
+
+      & .card-subtitle {
+        display: none;
+      }
+    }
+  }
+
+  @media (min-width: 1025px) {
+    & .card-subtitle {
+      display: flex;
+    }
+
+    & .card-tools {
+      flex: 1 1 40%;
+    }
+  }
+
+  @media (min-width: 1250px) {
+    & .projects-container {
+      width: 85%;
+    }
+
+    & .btn-text,
+    & .card-description-container {
+      display: flex;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    & .projects-container {
+      $card-height: 12vw;
+      $card-width: 30%;
+
+      @include cards-grid($card-height, $card-width);
+    }
+  }
+
+  @media (min-width: 1600px) {
+    & .projects-container {
+      $card-height: 16vw;
+      $card-width: 25%;
+
+      @include cards-grid($card-height, $card-width);
+    }
   }
 }
