tested new feautures on major browsers and devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,12 @@ label {
   }
 }
 
+@media screen and (min--moz-device-pixel-ratio: 0) {
+  .App {
+    scroll-snap-type: none;
+  }
+}
+
 /* Component Stylesheets */
 /* Buttons */
 @import "components/button/desButton.scss";
