--- a/src/components/homePage/designHome.scss
+++ b/src/components/homePage/designHome.scss
@@ -24,6 +24,10 @@
   width: 100%;
 }
 
+#scene li {
+  width: 100%;
+}
+
 /* ------------ Midground trees ------------ */
 .trees {
   position: relative;
