added explicit width and height to image elements

--- a/src/components/homePage/devHome.scss
+++ b/src/components/homePage/devHome.scss
@@ -59,6 +59,7 @@
 /* ------------ Bone background ------------ */
 img.bone-bg {
   width: 100%;
+  height: auto;
 }
 
 /* Fallback for browsers without webp support */
